# paper_to_podcast

./: .env.example  .gitignore  README.md  pyproject.toml
src/hearsay/: __init__.py  cli.py  pdf.py  review.py  tts.py  zotero.py
src/paper_podcast/: __init__.py  cli.py  pdf.py  review.py  tts.py  zotero.py
